fix: navbar jadwaltayang & zoom effect on mobile

--- a/src/main/resources/static/css/index/category-movie.css
+++ b/src/main/resources/static/css/index/category-movie.css
@@ -10,7 +10,7 @@
         width: 100%;
         display: flex;
         align-items: center;
-        padding: 0 45px;
+        padding: 0 20px;
         /* space for arrows */
     }
 
@@ -37,11 +37,11 @@
     }
 
     .arrow-category-left {
-        left: 0;
+        left: -15px;
     }
 
     .arrow-category-right {
-        right: 0;
+        right: -15px;
     }
 
     .category-container {
